# spectra

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release-on-version-bump.yml
docs/: CONTRIBUTING.md  README.md  config.example.toml  upgrade.md
src/: attach_target.rs  cli.rs  clipboard.rs  command_history.rs  config.rs  lib.rs  main.rs  storage.rs  upgrade.rs  xdg.rs
src/app/: command_dispatch.rs  command_palette.rs  copy_mode.rs  hooks.rs  mod.rs  persistence.rs  system_tree.rs  tests.rs  types.rs
src/core_lib/: filtering.rs  mod.rs  xdg.rs
src/core_lib/config/: mod.rs
src/core_lib/layout/: engine.rs
src/core_lib/runtime/: event_loop.rs
src/core_lib/terminal/: lifecycle.rs
src/core_lib/ui/: mod.rs
src/input/: keymap.rs  mod.rs  text_input.rs
src/io/: terminal.rs
src/ipc/: codec.rs  mod.rs  protocol.rs  socket_path.rs
src/runtime/: client.rs  mod.rs  server.rs
src/session/: mod.rs  pane.rs  pty_backend.rs  terminal_state.rs
src/session/manager/: mod.rs  persistence.rs  render.rs  tests.rs  windows.rs
src/ui/: mod.rs  render.rs  style.rs  text.rs  url.rs  window_manager.rs
tests/: cli_command_surface_e2e.rs  newline_behavior_e2e.rs  pty_backend_e2e.rs  render_color_e2e.rs  render_incremental_e2e.rs  render_snapshot_e2e.rs  socket_attach_detach_e2e.rs  socket_latency_e2e.rs  system_tree_overlay_e2e.rs  upgrade_cli_e2e.rs
tests/fixtures/render/: single_pane.txt  split_horizontal.txt  split_vertical.txt  system_tree_overlay.txt
tests/support/: mod.rs  render_snapshot.rs
